--- a/pages/index.html
+++ b/pages/index.html
@@ -351,8 +351,11 @@
           <script>
             var workspace = Blockly.inject('blocklyDiv',
                 {toolbox: document.getElementById('toolbox'),
+                theme: Blockly.Themes.Modern,
                 // theme: Theme
               });
+		//
+
           </script>
     </div>
 </body>
