--- a/pages/index.html
+++ b/pages/index.html
@@ -352,6 +352,15 @@
             var workspace = Blockly.inject('blocklyDiv',
                 {toolbox: document.getElementById('toolbox'),
                 theme: Blockly.Themes.Modern,
+                zoom:{
+                  controls: true,
+                  wheel: true,
+                  startScale: 1.0,
+                  maxScale: 3,
+                  minScale: 0.3,
+                  scaleSpeed: 1.2,
+                  pinch: true
+                },
                 // theme: Theme
               });
 		//
