Bug fix: Mudanças de cores nos blocos

--- a/pages/index.html
+++ b/pages/index.html
@@ -351,7 +351,7 @@
           <script>
             var workspace = Blockly.inject('blocklyDiv',
                 {toolbox: document.getElementById('toolbox'),
-                theme: Blockly.Themes.Modern,
+                theme: Blockly.Themes.Classic,
                 zoom:{
                   controls: true,
                   wheel: true,
