bug fix: blocos nao conectados

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </block>
         <block type="math_random_float"></block>
       </category>
-      <category name="Texto" colour="#5ba58c"> 
+      <category name="Texto" colour="#f26849"> 
         <block type="text">
           <field name="TEXT"></field>
         </block>
@@ -270,7 +270,7 @@
       </category>
       <sep></sep>
       <category name="Variaveis" colour="#d65cd6" custom="VARIABLE"></category>
-      <category name="Funções" colour="#f26849" custom="PROCEDURE"></category>
+      <category name="Funções" colour="#058863" custom="PROCEDURE"></category>
       <sep></sep>
       <category name="Saída" colour="#4c97ff">      </category>
       <category name="Entrada" colour="#9966ff">      </category>
