--- a/index.html
+++ b/index.html
@@ -22,23 +22,11 @@
 </script>
 <body>
     <xml id="toolbox" style="display: none">
-      <category name="Lógicos" colour="#2f3542">
-        <block type="controls_if"></block>
-        <block type="logic_compare">
-          <field name="OP" >EQ</field>
-        </block>
-        <block type="logic_operation">
-          <field name="OP">AND</field>
-        </block>
-        <block type="logic_negate"></block>
-        <block type="logic_boolean">
-          <field name="BOOL">TRUE</field>
-        </block>
-        <block type="logic_null"></block>
-        <block type="logic_ternary"></block>
-      </category>
   
-      <category name="Repetição" colour="#ffa502">
+  
+      <category name="Controlar" colour="#ffa502">
+        <block type="base_delay"></block>
+
         <block type="controls_repeat_ext">
           <value name="TIMES">
             <shadow type="math_number">
@@ -49,6 +37,7 @@
         <block type="controls_whileUntil">
           <field name="MODE">WHILE</field>
         </block>
+
         <block type="controls_for">
           <field name="VAR" id="i{T9F5d28sL$tHq)n*J3">i</field>
           <value name="FROM">
@@ -75,6 +64,14 @@
         </block>
       </category>
       <category name="Matemáticos" colour="#59c059">
+        <block type="controls_if"></block>
+
+        <block type="logic_compare">
+          <field name="OP" >EQ</field>
+        </block>
+        <block type="logic_operation">
+          <field name="OP">AND</field>
+        </block>
         <block type="math_number">
           <field name="NUM">0</field>
         </block>
@@ -91,11 +88,15 @@
             </shadow>
           </value>
         </block>
-        <block type="math_single">
-          <field name="OP">ROOT</field>
-          <value name="NUM">
+        <block type="math_random_int">
+          <value name="FROM">
             <shadow type="math_number">
-              <field name="NUM">9</field>
+              <field name="NUM">1</field>
+            </shadow>
+          </value>
+          <value name="TO">
+            <shadow type="math_number">
+              <field name="NUM">100</field>
             </shadow>
           </value>
         </block>
@@ -107,30 +108,13 @@
             </shadow>
           </value>
         </block>
-        <block type="math_constant">
-          <field name="CONSTANT">PI</field>
+        <block type="logic_negate"></block>
+        <block type="logic_boolean">
+          <field name="BOOL">TRUE</field>
         </block>
-        <block type="math_number_property">
-          <mutation divisor_inputS="false"></mutation>
-          <field name="PROPERTY">EVEN</field>
-          <value name="NUMBER_TO_CHECK">
-            <shadow type="math_number">
-              <field name="NUM">0</field>
-            </shadow>
-          </value>
-        </block>
-        <block type="math_round">
-          <field name="OP">ROUND</field>
-          <value name="NUM">
-            <shadow type="math_number">
-              <field name="NUM">3.1</field>
-            </shadow>
-          </value>
-        </block>
-        <block type="math_on_list">
-          <mutation op="SUM"></mutation>
-          <field name="OP">SUM</field>
-        </block>
+        <block type="logic_null"></block>
+        <block type="logic_ternary"></block>  
+   
         <block type="math_modulo">
           <value name="DIVIDEND">
             <shadow type="math_number">
@@ -160,18 +144,7 @@
             </shadow>
           </value>
         </block>
-        <block type="math_random_int">
-          <value name="FROM">
-            <shadow type="math_number">
-              <field name="NUM">1</field>
-            </shadow>
-          </value>
-          <value name="TO">
-            <shadow type="math_number">
-              <field name="NUM">100</field>
-            </shadow>
-          </value>
-        </block>
+  
         <block type="math_random_float"></block>
       </category>
       <category name="Texto" colour="#f26849"> 
@@ -272,24 +245,13 @@
       <category name="Variaveis" colour="#d65cd6" custom="VARIABLE"></category>
       <category name="Funções" colour="#058863" custom="PROCEDURE"></category>
       <sep></sep>
-      <category name="Saída" colour="#4c97ff">      </category>
-      <category name="Entrada" colour="#9966ff">      </category>
-      <category name="Input/Output" colour="#4c97ff"> 
-        <block type="inout_highlow"></block>
+      <category name="Saída" colour="#4c97ff">  
+        <block type="inout_buildin_led"></block>
         <block type="inout_digital_write"></block>
-        <block type="inout_digital_read"></block>
         <block type="inout_analog_write">
           <value name="NUM">
             <block type="math_number">
               <field name="NUM">0</field>
-            </block>
-          </value>
-        </block>
-        <block type="inout_analog_read"></block>
-        <block type="serial_print">
-          <value name="CONTENT">
-            <block type="text">
-              <field name="TEXT"></field>
             </block>
           </value>
         </block>
@@ -301,8 +263,20 @@
           </value>
         </block>
         <block type="inout_notone"></block>
-        <block type="inout_buildin_led"></block>
+        <block type="serial_print">
+          <value name="CONTENT">
+            <block type="text">
+              <field name="TEXT"></field>
+            </block>
+          </value>
+        </block>
       </category>
+      <category name="Entrada" colour="#9966ff">
+        <block type="inout_digital_read"></block>
+        <block type="inout_analog_read"></block>
+
+            </category>
+    
 
 
       <sep></sep>
@@ -339,9 +313,10 @@
   //
 
         </script>
+
   </div>
+
      
-  </div>
   <div style="position: absolute; top: 0; right: 0">
   <button onclick='ok()'>
     <i data-feather="play"></i>
