add project id to put request

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="./msg/js/pt-br.js"></script>
 
     <script>
-      var id=-1;
+      var id=-1 ;
       var project=-1;
     </script>
 </head>
@@ -362,8 +362,7 @@
       xmlDom = Blockly.Xml.workspaceToDom(workspace);
       var xmlText = Blockly.Xml.domToPrettyText(xmlDom);
       //window.ReactNativeWebView.postMessage(xmlText);
-      const resposta = await axios.put("https://apimakerblocks.herokuapp.com/project/", { id, xml: xmlText});
-      alert(resposta.data);
+      const resposta = await axios.put("https://apimakerblocks.herokuapp.com/project/", { id, project, xml: xmlText});      
       localStorage.setItem("dom",xmlText);
     }
     
@@ -375,15 +374,22 @@
       Blockly.mainWorkspace.undo(true);      
     }
 
-    async function loadXML() {
-      const resposta = await axios.get("https://apimakerblocks.herokuapp.com/project/"+id);
-      var xmlText = resposta.data[0].xml;      
-
+    async function loadXML() {      
+      const resposta = await axios.get("https://apimakerblocks.herokuapp.com/project/"+project)
+      .then((resposta) => {
+        //alert('ok')
+        var xmlText = resposta.data.xml;            
+        document.title = resposta.data.name; 
+        //alert(xmlText);
       xmlDom2=Blockly.Xml.textToDom(xmlText);
       //alert(localStorage.getItem("dom"));
       console.log(localStorage.getItem("dom"));
 
       Blockly.Xml.clearWorkspaceAndLoadFromXml(xmlDom2, workspace);
+      //alert('ok2')
+      })
+      .catch((error) => alert('erro'+error));
+      
     }
     loadXML();
     </script>
