adicionado o bloco de ultrassonico

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
       <category name="Entrada" colour="#9966ff">
         <block type="inout_digital_read"></block>
         <block type="inout_analog_read"></block>
+        <block type="inout_ultrassonico"></block>
 
             </category>
     
