post message correction

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <i data-feather="save"></i>
   </button>
   <br>  
-  <button onclick='loadXML()'>
+  <button onclick='ok()'>
     <i data-feather="upload"></i>
   </button>
   <br>
@@ -351,8 +351,8 @@
 
       var xmlDom;
       function ok(){
-        Blockly.JavaScript.addReservedWords('code');
-        var code = Blockly.JavaScript.workspaceToCode(workspace);
+        //Blockly.JavaScript.addReservedWords('code');
+        //var code = Blockly.JavaScript.workspaceToCode(workspace);
         
         //console.log('cd'+code);
         window.ReactNativeWebView.postMessage('upload')        
