--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style type="text/css">
+      html, body, #blocklyDiv {
+        border: 0;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+      }
+    </style>
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="./blockly_compressed.js"></script>
     <script src="./blocks_compressed.js"></script>
@@ -18,6 +28,7 @@
       var projectXml = "";
       var projectName = "";
     </script>
+
 </head>
 <body>
     <xml id="toolbox" style="display: none">
@@ -117,7 +128,7 @@
      
     </category>
       </category></xml>
-      <div id="blocklyDiv" style="height: 680px; width: 900px;">
+      <div id="blocklyDiv" >
       
         <script>
           var workspace = Blockly.inject('blocklyDiv',
