add build task arduino and correction compressed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="./blockly_compressed.js"></script>
     <script src="./blocks_compressed.js"></script>
-    <script src="../arduino_compressed.js"></script>
+    <script src="./arduino_compressed.js"></script>
     <script src="./msg/js/pt-br.js"></script>
 
     <script>
